--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "mongoose": "^8.17.1",
     "pug": "^3.0.3"
   },
   "devDependencies": {
