--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "express-session": "^1.18.2",
     "method-override": "^3.0.0",
     "mongoose": "^8.17.1",
     "pug": "^3.0.3"
   },
   "devDependencies": {
+    "@types/connect-flash": "^0.0.40",
     "@types/express": "^5.0.3",
+    "@types/express-session": "^1.18.2",
     "@types/node": "^24.2.1",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
