--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "typeRoots": ["./node_modules/@types", "./types"],
     "target": "ES6", // cho phép biên dịch code Typescript sang kiểu ES6
     "module": "commonjs", // CommonJS là tiêu chuẩn được sử dụng trong Node.js để làm việc với các module
     "removeComments": true, // xóa comments khi biên dịch sang file js
