--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cloudinary": "^2.7.0",
     "connect-flash": "^0.1.1",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
@@ -18,7 +19,8 @@
     "mongoose": "^8.17.1",
     "mongoose-slug-updater": "^3.3.0",
     "multer": "^2.0.2",
-    "pug": "^3.0.3"
+    "pug": "^3.0.3",
+    "streamifier": "^0.1.1"
   },
   "devDependencies": {
     "@types/connect-flash": "^0.0.40",
